k8s/tensorboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proto-tensorboard-service
spec:
  ports:
  - port: 6006
    protocol: TCP
  selector:
    app: proto-tensorboard
