k8s/tensorboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tensorboard-proto
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: "141.64.0.0/16,2001:638:812::/48,10.0.0.0/8"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - secretName: "prototb-subdomain-secret"
      hosts:
        - "tensorboard-proto.internal.datexis.com"
  rules:
    - host: "tensorboard-proto.internal.datexis.com"
      http:
        paths:
        - path:
          backend:
            service:
              name: proto-tensorboard-service
              port:
                number: 6006
          pathType: ImplementationSpecific
